# triage-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-langchain.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  classifier.py  db.py  lc_engine.py  main.py  models.py  schemas.py
static/: index.html
tests/: test_api.py  test_classifier.py  test_lc_engine.py
