[project]
name = "triage-ai"
version = "1.0.0"
description = "Intelligent support-ticket triage: LLM classification with a deterministic fallback"
authors = [{ name = "Jorge Martes", email = "jorge22tc@gmail.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["B008"]  # `Depends(...)` in defaults is FastAPI's canonical DI pattern

[tool.ruff.lint.per-file-ignores]
"tests/test_api.py" = ["E402"]  # env var must be set before importing app
